2007-02-08  Edward Hervey  <edward@fluendo.com>

	* po/POTFILES.in:
	Add pitivi/ui/timeline.py for translatable strings
	* po/ar.po:
	* po/ca.po:
	* po/dz.po:
	* po/el.po:
	* po/en_GB.po:
	* po/es.po:
	* po/fi.po:
	* po/fr.po:
	* po/pa.po:
	* po/pt_BR.po:
	* po/sv.po:
	* po/zh_CN.po:
	Update po files for latest modifications.
	Includes french translation by Julien Tous <julien.tous@gmail.com>
	Fixes #405467

2007-02-08  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/timelineobjects.py:
	First step of implementing simple timeline editing mode.
	Still need to fill in the SimpleEditingWidget.
	
2007-02-07  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/sourcefactories.py:
	Make the explanation message go away when dragging into the source
	list. This allows drag-and-drop again from outside pitivi.
	Fixes #403877

2007-02-02  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/timeline.py:
	Show an explanation text in the timeline when it is empty so new users
	know what to do.
	Fixes #383402

2007-02-02  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/mainwindow.py:
	Make requirement of gconf optional, since we want pitivi to also
	work on pure gtk+ installations.

2007-01-31  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Back to development cycle

=== release 0.10.2 ===

2007-01-31  Edward Hervey  <edward@fluendo.com>

	* NEWS:
	* RELEASE:
	* configure.ac:
	Releasing 0.10.2

2007-01-28  Edward Hervey  <edward@fluendo.com>

	* AUTHORS: (Contributors): 
	Updated contributor list

2007-01-26  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	0.10.1.3 pre-release

2007-01-26  Edward Hervey  <edward@fluendo.com>

	* configure.ac: (PYGST_REQ): 
	Bring gst-python requirement down to 0.10.6. 0.10.7 is not a hard
	requirement, but highly recommended since it fixes big thread-safety
	issues.

2007-01-25  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	0.10.1.2 pre-release

2007-01-25  Edward Hervey  <edward@fluendo.com>

	* po/ar.po:
	* po/ca.po: